metadata/objects/Limits_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Aggregate_Queries__c</fullName>
        <label>Aggregate Queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Async_Calls__c</fullName>
        <label>Async Calls</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPU_Time__c</fullName>
        <label>CPU Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callouts__c</fullName>
        <label>Callouts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DML_Rows__c</fullName>
        <label>DML Rows</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DML_Statements__c</fullName>
        <label>DML Statements</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_ms__c</fullName>
        <label>Elapsed ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Invocations__c</fullName>
        <label>Email Invocations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Calls__c</fullName>
        <label>Future Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heap_Size__c</fullName>
        <label>Heap Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iterations__c</fullName>
        <label>Iterations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Push_Apex_Calls__c</fullName>
        <label>Mobile Push Apex Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profiler_Type__c</fullName>
        <label>Profiler Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <label>Queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_Locator_Rows__c</fullName>
        <label>Query Locator Rows</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_Rows__c</fullName>
        <label>Query Rows</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queueable_Jobs__c</fullName>
        <label>Queueable Jobs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOSL_Queries__c</fullName>
        <label>SOSL Queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <defaultValue>&quot;Trial&quot;</defaultValue>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Limits Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Profiler_Type__c</columns>
        <columns>Iterations__c</columns>
        <columns>Elapsed_ms__c</columns>
        <columns>CPU_Time__c</columns>
        <columns>Heap_Size__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>